# src/routes/login.routes.js
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import LoginControllers from '../controllers/login.controllers.js';
+
+const loginRouter = Router();
+const loginControllers = new LoginControllers();
+
+loginRouter.post('', loginControllers.realizarLogin);
+
+export default loginRouter;
